Fix vertical spacings

--- a/app/assets/stylesheets/partials/_reports.scss
+++ b/app/assets/stylesheets/partials/_reports.scss
@@ -86,6 +86,7 @@
 .c-purple { color: $purple; }
 .c-red { color: $red; }
 .c-black { color: $black; }
+.c-none { color: rgba(0,0,0,0); }
 .c-grey-dark:hover { color: $grey-dark; }
 .td-none { text-decoration: none; }
 .td-none:hover { text-decoration: none; }
